--- a/Aula 01/Atividade.html
+++ b/Aula 01/Atividade.html
@@ -4,12 +4,12 @@
     </head>
     <body>
  <!--Tag tamanho do maior pro menorH1, H2, H3, H4, H5, H6-->
-        <h1>Olá Mundo</h1>
-        <h2>Olá Mundo</h2>
-        <h3>Olá Mundo</h3>
-        <h4>Olá Mundo</h4>
-        <h5>Olá Mundo</h5>
-        <h6>Olá Mundo</h6>
+        <h1>Tamanho H1</h1>
+        <h2>Tamanho H2</h2>
+        <h3>Tamanho H3</h3>
+        <h4>Tamanho H4</h4>
+        <h5>Tamanho H5</h5>
+        <h6>Tamanho H6</h6>
 
    <!-- hr cria uma linha 
       br pula linha-->
@@ -19,10 +19,11 @@
             <b> Titulo em negrito </b>
             <br> 
             Texto <br>
-            Texto
+            Ctrl + espaço = atalho
             <br>
             <i> texto em italico</i> <br>
             <u> texto sublinhado </u>
         </p>
+        <a href="Link.com.br"> Visivel para o usuario</a>
     </body>
 </html>
