--- a/Aulas/Aula 02.html
+++ b/Aulas/Aula 02.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-            Cabeçario
+            Cabeçalho
         </header>
         <footer>
             Rodapé
