--- a/Aulas/Aula 02.html
+++ b/Aulas/Aula 02.html
@@ -4,8 +4,16 @@
     </head>
     <body>
         <header>
-            Cabeçario
+            Cabeçalho
         </header>
+        <nav> 
+            Navegador
+        </nav>
+
+        <div>
+            Agrupador div, container
+        </div>
+
         <footer>
             Rodapé
         </footer>
