--- a/Aulas/02_Estrutura.html
+++ b/Aulas/02_Estrutura.html
@@ -19,3 +19,6 @@
         </footer>
     </body>
 </html>
+<!-- nav é pra navegação
+div é conteiner para qualquer coisa
+span é conteiner para qualquer coisa-->
