--- a/Aulas/tabelas.html
+++ b/Aulas/tabelas.html
@@ -6,7 +6,7 @@
  <!--style propriedade que modifica o estilo-->
   <!-- vai trazer formato de tabela-->     
   <!--Ctrl + D seleciona itens que são iguais--> 
-        <table style="border: 1px solid black;">
+        <table style="border: 1px solid black; background-color: pink;">
             <tr> <!-- linha-->
                 <th>NOME</th>
                 <th>EMAIL</th>
