--- a/Aulas/Style.html
+++ b/Aulas/Style.html
@@ -7,15 +7,20 @@
 <body>
 
  Ctrl + ponto + virgula = comenta
- <h1 style="color: rgb(rgb(214, 110, 179), rgb(109, 175, 109), rgb(129, 129, 226));"></h1>
+ <h1 style="color: rgb(rgb(214, 110, 179), rgb(109, 175, 109), rgb(129, 129, 226));"> Color</h1>
     <style>
         body {
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(255, 145, 178);
         }
     </style>
     <!-- Chamar uma target e esitilizar ela 
         font-size é estilizar as fontes 
     tecnica one line-->
+    <!-- a imagem e uma tal substituição / tamanho-->
+    <img src="A.png" alt="Não foi possivel baixar imagem"
+    height="100px">
+    <!-- mesmo que a imagem-->
+    <video src=""></video>
 </body>
 
 </html>
