--- a/Aulas/Aula_03/Style.html
+++ b/Aulas/Aula_03/Style.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Aula Styles</title>
+    <title>SENAI 2024</title>
 </head>
 
 <body>
@@ -19,7 +19,8 @@
     <!-- a imagem e uma tal substituição / tamanho-->
     <img src="A.png" alt="Não foi possivel baixar imagem"
     height="100px">
-    <!-- mesmo que a imagem-->
+    <!-- mesmo que a imagem
+    lopp quando terminar inicia novamente-->
     <video src=""></video>
 </body>
 
