--- a/Aulas/Aula_03/Site/Site_Index.html
+++ b/Aulas/Aula_03/Site/Site_Index.html
@@ -1,21 +1,45 @@
 <!-- Site Conteúdo dorama-->
 <html>
-    <head>
-        <header>
-            <div class="formtdiv">
-                <h1><i>DORAMA</i></h1>
-            </div> 
-        </header>
 
-    </head>
+<head>
+    <title>Atividade</title>
+</head>
 
+<body>
+    <header>
+        <div>
+            <h1><i>QUEEN OF TEARS</i></h1>
+        </div>
+    </header>
+    <hr>
+    <table style="border: 500xp, 500xp; solid rgb(59, 0, 21); background-color: rgb(217, 177, 255);">
+        <tr>
+            <th>
+                <h4>[MV] BSS(부석순)(SEVENTEEN) - The Reasons of My Smiles(자꾸만 웃게 돼)</h4>
+                <a href="https://www.youtube.com/watch?v=ucpb4BYNJ6s"> Opening Queen of Tears</a>
+                <text-aling>
+                    <center> AAAA</center>
+                </text-aling>
+            </th>
+            <th>
+                <a href="https://www.youtube.com/watch?v=_j0BOGdmh38">[MV] 10CM - Tell Me It's Not a Dream(고장난걸까)</a>
+            </th>
+        </tr>
+    </table>
+    <footer>
 
- <body>
-
- </body>
-
-    <Footer>
-        <h1>teste</h1>
     </footer>
+    <style>
+        header {
+            border: 10xp, 10xp;
+            background-color: rgba(255, 106, 176, 0.589);
+            text-align: center;
+        }
+
+        body {
+            background-color: rgb(246, 190, 210);
+        }
+    </style>
+</body>
 
 </html>
