--- a/Aulas/Aula_03/Site/Site_Index.html
+++ b/Aulas/Aula_03/Site/Site_Index.html
@@ -12,20 +12,39 @@
         </div>
     </header>
     <hr>
-    <table style="border: 500xp, 500xp; solid rgb(59, 0, 21); background-color: rgb(217, 177, 255);">
+
+
+    <table>
+        <tr>
+            <th>
+                <img src="./Queen_of_tears.png" alt="">    
+            </th>
+            <th>
+                <h1>-- QUEEN OF TEARS -- </h1>
+                <ul>
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                    <li>item 4</li>
+                    <li>item 5</li>
+                </ul>
+            </th>
+        </tr>
+    </table>
+
+
+    <!-- <table style="border: 500xp, 500xp; solid rgb(59, 0, 21); background-color: rgb(217, 177, 255);">
         <tr>
             <th>
                 <a href="https://www.youtube.com/watch?v=ucpb4BYNJ6s">[MV] BSS(부석순)(SEVENTEEN) - The Reasons of My Smiles(자꾸만 웃게 돼)</a>
-                <text-aling>
-                    <center> AAAA</center>
-                </text-aling>
+    
             </th>
             <th>
                 <a href="https://www.youtube.com/watch?v=_j0BOGdmh38">[MV] 10CM - Tell Me It's Not a Dream(고장난걸까)</a>
             </th>
         </tr>
     </table>
-    <footer>
+    <footer> -->
 
     </footer>
     <style>
@@ -37,6 +56,14 @@
 
         body {
             background-color: rgb(246, 190, 210);
+        }
+
+        table{
+            width: 100%;
+            text-align: left;
+        }
+        ul{
+            list-style: none;
         }
     </style>
 </body>
