--- a/Aulas/Aula_03/Site/Site_Index.html
+++ b/Aulas/Aula_03/Site/Site_Index.html
@@ -20,13 +20,23 @@
                 <img src="./Queen_of_tears.png" alt="">    
             </th>
             <th>
-                <h1>-- QUEEN OF TEARS -- </h1>
+                <h1>QUEEN OF TEARS ^-^ </h1>
                 <ul>
-                    <li>item 1</li>
-                    <li>item 2</li>
-                    <li>item 3</li>
-                    <li>item 4</li>
-                    <li>item 5</li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=ucpb4BYNJ6s">[MV] BSS(부석순)(SEVENTEEN) - The Reasons of My Smiles(자꾸만 웃게 돼)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=_j0BOGdmh38">[MV] 10CM - Tell Me It's Not a Dream(고장난걸까)</a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=jRRCWFLAO6k">[MV] Heize(헤이즈) - Hold Me Back(멈춰줘)</a>
+                    </li>
+                    <li>
+                        <a href="//www.youtube.com/watch?v=Z4qVfCi_lUI">[MV] Crush - Love You With All My Heart(미안해 미워해 사랑해)</a>
+                    </li>
+                    <li>
+                        <a href="//www.youtube.com/watch?v=TcHIPSX8Kww">[MV] So Soo Bin(소수빈) - Last Chance</a>
+                    </li>
                 </ul>
             </th>
         </tr>
