--- a/Aulas/Aula_03/Site/Site_Index.html
+++ b/Aulas/Aula_03/Site/Site_Index.html
@@ -17,22 +17,24 @@
     <table>
         <tr>
             <th>
-                <img src="./Queen_of_tears.png" alt="">    
+                <img src="./Queen_of_tears.png" alt="">
             </th>
-            <th>
-                <h1>QUEEN OF TEARS ^-^ </h1>
+                    <th>
                 <ul>
                     <li>
-                        <a href="https://www.youtube.com/watch?v=ucpb4BYNJ6s">[MV] BSS(부석순)(SEVENTEEN) - The Reasons of My Smiles(자꾸만 웃게 돼)</a>
+                        <a href="https://www.youtube.com/watch?v=ucpb4BYNJ6s">[MV] BSS(부석순)(SEVENTEEN) - The Reasons of
+                            My Smiles(자꾸만 웃게 돼)</a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/watch?v=_j0BOGdmh38">[MV] 10CM - Tell Me It's Not a Dream(고장난걸까)</a>
+                        <a href="https://www.youtube.com/watch?v=_j0BOGdmh38">[MV] 10CM - Tell Me It's Not a
+                            Dream(고장난걸까)</a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/watch?v=jRRCWFLAO6k">[MV] Heize(헤이즈) - Hold Me Back(멈춰줘)</a>
                     </li>
                     <li>
-                        <a href="//www.youtube.com/watch?v=Z4qVfCi_lUI">[MV] Crush - Love You With All My Heart(미안해 미워해 사랑해)</a>
+                        <a href="//www.youtube.com/watch?v=Z4qVfCi_lUI">[MV] Crush - Love You With All My Heart(미안해 미워해
+                            사랑해)</a>
                     </li>
                     <li>
                         <a href="//www.youtube.com/watch?v=TcHIPSX8Kww">[MV] So Soo Bin(소수빈) - Last Chance</a>
@@ -41,21 +43,7 @@
             </th>
         </tr>
     </table>
-
-
-    <!-- <table style="border: 500xp, 500xp; solid rgb(59, 0, 21); background-color: rgb(217, 177, 255);">
-        <tr>
-            <th>
-                <a href="https://www.youtube.com/watch?v=ucpb4BYNJ6s">[MV] BSS(부석순)(SEVENTEEN) - The Reasons of My Smiles(자꾸만 웃게 돼)</a>
-    
-            </th>
-            <th>
-                <a href="https://www.youtube.com/watch?v=_j0BOGdmh38">[MV] 10CM - Tell Me It's Not a Dream(고장난걸까)</a>
-            </th>
-        </tr>
-    </table>
-    <footer> -->
-
+    <footer>
     </footer>
     <style>
         header {
@@ -68,11 +56,12 @@
             background-color: rgb(246, 190, 210);
         }
 
-        table{
+        table {
             width: 100%;
             text-align: left;
         }
-        ul{
+
+        ul {
             list-style: none;
         }
     </style>
