--- a/Aulas/Aula_04/index.html
+++ b/Aulas/Aula_04/index.html
@@ -6,7 +6,10 @@
     <!--configuração padrão-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--Carregar o estilo antes da página-->
+    <!--href com ./ significa pegar fora desse documento, uma vez-->
+    <link rel="stylesheet" href="./styless.css">
+    <title>Aula 04</title>
 </head>
 <body>
     
