--- a/Aulas/Aula_03/Site/Site_Index.html
+++ b/Aulas/Aula_03/Site/Site_Index.html
@@ -8,7 +8,10 @@
 <body>
     <header>
         <div>
-            <h1><i>QUEEN OF TEARS</i></h1>
+            <!-- dnfn serve para dar um italico diferente
+            abrr abreviar, quando passar o mouse por cima vai ter a palavra escrita em ""
+            demarcado com pontinhos abaixo da letra ao centro-->
+            <h1><i><dfn><abbr title="Dorama">D</abbr></dfn>: QUEEN OF TEARS</i></h1>
         </div>
     </header>
     <hr>
