--- a/Aulas/Aula_05/login.html
+++ b/Aulas/Aula_05/login.html
@@ -25,7 +25,7 @@
                     <input type="password">
                 </div>
             </div>
-            <div>
+            <div class="card-footer">
                 <!--substuir o que está escrito value-->
                 <input type="submit" value="Entrar">
                 <a href="#"> Esqueceu a senha?</a>
@@ -36,5 +36,5 @@
 </body>
 
 </html>
-<!-- #ID    / 
+<!-- #ID    /
     .Class /global -->
