--- a/Aulas/Aula_05/login.html
+++ b/Aulas/Aula_05/login.html
@@ -27,7 +27,7 @@
             </div>
             <div class="card-footer">
                 <!--substuir o que está escrito value-->
-                <input type="submit" value="Entrar">
+                <input class="submit" type="submit" value="Entrar">
                 <a href="#"> Esqueceu a senha?</a>
             </div>
         </form>
