--- a/Aulas/Aula_05/login.html
+++ b/Aulas/Aula_05/login.html
@@ -28,6 +28,7 @@
             <div class="card-footer">
                 <!--substuir o que está escrito value-->
                 <input class="submit" type="submit" value="Entrar">
+                <!--*class="button_slide_left" COLOCAR DENTRO DO INPUT ACIMA-->
                 <a href="#"> Esqueceu a senha?</a>
             </div>
         </form>
