--- a/Aulas/Aula_05/login.html
+++ b/Aulas/Aula_05/login.html
@@ -26,10 +26,12 @@
                 </div>
             </div>
             <div class="card-footer">
-                <!--substuir o que está escrito value-->
-                <input class="submit" type="submit" value="Entrar">
-                <!--*class="button_slide_left" COLOCAR DENTRO DO INPUT ACIMA-->
-                <a href="#"> Esqueceu a senha?</a>
+                <div class="button_slide slide_left">
+                     <a rel="Dorama.html" href= "./dorama.html">Entrar</a>
+                </div>
+
+                    <a href="#"> Esqueceu a senha?</a>
+
             </div>
         </form>
     </div>
