--- a/Aulas/Aula_05/login.html
+++ b/Aulas/Aula_05/login.html
@@ -11,6 +11,9 @@
     <div id="login">
         <form class="card" action="#">
             <div class="card-header">
+                <!-- alt: caso não carregue a imagem-->
+                <img src="coração dorama.jpeg" alt="Não foi possivel baixar imagem"
+                height="100px">              
                 <h2>Login</h2>
             </div>
             <div class="card-content">
@@ -27,10 +30,10 @@
             </div>
             <div class="card-footer">
                 <div class="button_slide slide_left">
+                    <!--ligar pasta--> 
                      <a rel="Dorama.html" href= "./dorama.html">Entrar</a>
                 </div>
-
-                    <a href="#"> Esqueceu a senha?</a>
+                    <a rel="esqueceusenha.html" href="./esqueceusenha.html"> Esqueceu a senha?</a>
 
             </div>
         </form>
