--- a/Aulas/Aula_05/login.html
+++ b/Aulas/Aula_05/login.html
@@ -14,7 +14,7 @@
                 <!-- alt: caso não carregue a imagem-->
                 <img src="coração dorama.jpeg" alt="Não foi possivel baixar imagem"
                 height="100px">              
-                <h2>Login</h2>
+                <h2>World Dorama</h2>
             </div>
             <div class="card-content">
                 <div class="card-content-area">
@@ -31,7 +31,7 @@
             <div class="card-footer">
                 <div class="button_slide slide_left">
                     <!--ligar pasta--> 
-                     <a rel="Dorama.html" href= "./dorama.html">Entrar</a>
+                     <a rel="Dorama.html" href= "../Aula_03/Site/dorama.html">Entrar</a>
                 </div>
                     <a rel="esqueceusenha.html" href="./esqueceusenha.html"> Esqueceu a senha?</a>
 
