--- a/Aulas/Aula_05/login.html
+++ b/Aulas/Aula_05/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles.css">
+    <title>Dorama</title>
 </head>
 
 <body>
@@ -11,9 +12,9 @@
     <div id="login">
         <form class="card" action="#">
             <div class="card-header">
-                <!-- alt: caso não carregue a imagem-->
+                <!-- alt: caso não carregue a imagem--> 
                 <img src="coração dorama.jpeg" alt="Não foi possivel baixar imagem"
-                height="100px">              
+                height="100px">        
                 <h2>World Dorama</h2>
             </div>
             <div class="card-content">
@@ -31,16 +32,17 @@
             <div class="card-footer">
                 <div class="button_slide slide_left">
                     <!--ligar pasta--> 
-                     <a rel="Dorama.html" href= "../Aula_03/Site/dorama.html">Entrar</a>
+                     <a rel="dorama.html" href= "../Aula_03/Site/dorama.html">Entrar</a>
                 </div>
-                    <a rel="esqueceusenha.html" href="./esqueceusenha.html"> Esqueceu a senha?</a>
-
+                <div class="card-footer">
+                    <a rel="cadastro.html" href="./cadastro.html"> Cadastro</a>
+                    <a rel="esqueceusenha.html" href="./esqueceusenha.html">Esqueceu a senha?</a>
+                </div>
             </div>
         </form>
     </div>
 
 </body>
-
 </html>
 <!-- #ID    /
     .Class /global -->
