--- a/Aulas/Aula_06/primeiro.html
+++ b/Aulas/Aula_06/primeiro.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <script>
+        var pessoas;
         //declarando uma variavel dentro do string
         var nome ="Gabrielle";
         console.log(nome);
+
+
     </script>
 </body>
 </html>
