--- a/Aulas/Aula_06/primeiro.html
+++ b/Aulas/Aula_06/primeiro.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula Javascript</title>
 </head>
+
 <body>
     <script>
-        var pessoas;
+        //construir lista com programação javascript
+        //foreach pesquisar
+        // adição de uma pessoa
+        // var teste = [0,1,2,3];
+        var pessoas = [
+            pessoa, {
+                nome: "Gabrielle",
+                cor_favorita: "Rosa"
+                //var: "number",
+                //pessoas: [0,1,2];
+            },
+            {
+                nome: "Minoru",
+                cor_favorita: "Rosa"
+            },
+            {
+                nome: "Sayuri",
+                cor_favorita: "Azul"
+            },
+
+            {
+                nome: "Leticia",
+                cor_favorita: "Roxo"
+            },
+             {
+                nome: "Andrei",
+                cor_favorita: "Azul"
+            },
+            {
+                nome: "Ellen",
+                cor_favorita: "Preta"
+            }
+        ]
+        // leigth é o quanto tem no array
+        // ir direto a linha
+        console.log(length[1]);
+
+        // contador iniciado
+        // menor que contador, tem . length para saber o local
+        for (var cont = 0; cont < pessoas.length; cont++) {
+            console.log[cont];
+        }
         //declarando uma variavel dentro do string
-        var nome ="Gabrielle";
+        var nome = "Gabrielle";
         console.log(nome);
 
 
     </script>
 </body>
+
 </html>
