--- a/Aulas/Aula_06/primeiro.html
+++ b/Aulas/Aula_06/primeiro.html
@@ -34,7 +34,7 @@
                 cor_favorita: "Roxo"
             },
              {
-                nome: "Andrei",
+                nome: "Andrew",
                 cor_favorita: "Azul"
             },
             {
