--- a/Aulas/Aula_06/primeiro.html
+++ b/Aulas/Aula_06/primeiro.html
@@ -14,7 +14,8 @@
         // adição de uma pessoa
         // var teste = [0,1,2,3];
         var pessoas = [
-            pessoa, {
+            // da para por pessoa {}
+            {
                 nome: "Gabrielle",
                 cor_favorita: "Rosa"
                 //var: "number",
@@ -42,6 +43,21 @@
                 cor_favorita: "Preta"
             }
         ]
+
+        // outro exemplo:
+        //Explicação do um banco não relacional e concatenação 
+        /* var pessoa ={
+            nome: "",
+            cpf:"",
+            rg:"",
+            data_nascimento:
+        pais:{
+            nome:"",
+            sobrenome:"",
+            pais{...}
+        }
+        }; */
+        
         // leigth é o quanto tem no array
         // ir direto a linha
         console.log(length[1]);
