--- a/Aulas/Aula_06/primeiro.html
+++ b/Aulas/Aula_06/primeiro.html
@@ -57,7 +57,7 @@
             pais{...}
         }
         }; */
-        
+
         // leigth é o quanto tem no array
         // ir direto a linha
         console.log(length[1]);
@@ -66,6 +66,14 @@
         // menor que contador, tem . length para saber o local
         for (var cont = 0; cont < pessoas.length; cont++) {
             console.log[cont];
+        }
+
+        if (pessoas[cont].email == undefined)
+         {
+                //console.log("0" + pessoas[cont].nome+" não tem e-mail");
+                console.log('0 ${pessoas[cont].nome} não tem e-mail')
+         }else{
+            console.log(pessoas[cont].email)
         }
         //declarando uma variavel dentro do string
         var nome = "Gabrielle";
