--- a/Aulas/Aula_06/primeiro.html
+++ b/Aulas/Aula_06/primeiro.html
@@ -68,8 +68,7 @@
             console.log[cont];
         }
 
-        if (pessoas[cont].email == undefined)
-         {
+        if (pessoas[cont].email == undefined) {
                 //console.log("0" + pessoas[cont].nome+" não tem e-mail");
                 console.log('0 ${pessoas[cont].nome} não tem e-mail')
          }else{
