--- a/Aulas/Aula_08_09/index.html
+++ b/Aulas/Aula_08_09/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cadastro de alunos</h1>
-    <input type="text">
+    <input type="text"> <button>Adicionar</button>
     <ul>
         <li></li>
         <li></li>
