--- a/Aulas/Aula_08_09/index.html
+++ b/Aulas/Aula_08_09/index.html
@@ -5,13 +5,16 @@
     <link rel="stylessheet" href="./styles.css">
     <title>Lista de alunos dinamicas</title>
 </head>
-<body>
-    <h1>Cadastro de alunos</h1>
-    <input type="text"> <button>Adicionar</button>
-    <ul>
-        <li></li>
-        <li></li>
 
+</body>
+    <h1>Cadastro de alunos</h1>
+    <input id="input" type="text">
+    <!--on click é sempre que clicar aparece-->
+    <!-- botão clica e adiciona no campo-->
+    <button onclick="adicionar()">Adicionar</button>
+    
+    <ul id="ul">
+        <il>a</il>
     </ul>
     <script src="./script.js"></script>
 </body>
