--- a/Aulas/Aula_08_09/index.html
+++ b/Aulas/Aula_08_09/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylessheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Lista de alunos dinamicas</title>
 </head>
 
@@ -14,7 +14,6 @@
     <button onclick="adicionar()">Adicionar</button>
     
     <ul id="ul">
-        <il>a</il>
     </ul>
     <script src="./script.js"></script>
 </body>
