--- a/Aulas/atividade_calculadora/index.html
+++ b/Aulas/atividade_calculadora/index.html
@@ -11,6 +11,9 @@
         <label>
             <!--display-->
             <input type="number">
+            <!-- verificar
+            <input formControlName="sGPTypeDeliveryId" type="text" placeholder="apenas números" 
+             class="form-control" required="required" pattern="[0-9]+$" -->
         </label>
     </div>
     <main>
@@ -36,7 +39,7 @@
       </ul>  
 
 <!--Second colunm 2,5,8-->
-        <ul>
+        <ul class="ul">
             <div class="numb2">
                 <li>
                     <button>2</button>
@@ -56,7 +59,7 @@
         </ul>
 
  <!-- third colunm 3, 6, 9-->
-        <ul>
+        <ul class="ul">
             <div class="numb3">
                 <li>
                     <button>3</button>
