--- a/Aulas/atividade_calculadora/index.html
+++ b/Aulas/atividade_calculadora/index.html
@@ -20,61 +20,61 @@
 <!--first colunm 1,4,7-->
       <ul class="ul">
         <div class="numb1">
-            <li>
+            <div class ="button">
                 <button>1</button>
-            </li>
+            </div>
         </div>
 
         <div class="numb4">
-            <li>
+            <div>
                 <button>4</button>
-            </li>
+            </div>
         </div>
 
         <div class="numb7">
-            <li>
+            <div>
                 <button>7</button>
-            </li>
+            </div>
         </div>
       </ul>  
 
 <!--Second colunm 2,5,8-->
         <ul class="ul">
             <div class="numb2">
-                <li>
+                <div>
                     <button>2</button>
-                </li>
+                </div>
             </div>
             <div class="numb5">
-                <li>
+                <div></div>
                     <button>5</button>
-                </li>
+                </div>
             </div>
 
             <div class="numb8">
-                <li>
+                <div>
                     <button>8</button>
-                </li>
+                </div>
             </div>
         </ul>
 
  <!-- third colunm 3, 6, 9-->
         <ul class="ul">
             <div class="numb3">
-                <li>
+                <div>
                     <button>3</button>
-                </li>
+                </div>
             </div>
             <div class="numb6">
-                <li>
+                <div>
                     <button>6</button>
-                </li>
+                </div>
             </div>
 
             <div class="numb9">
-                <li>
+                <div>
                     <button>9</button>
-                </li>
+                </div>
             </div>
         </ul>
 
