--- a/Aulas/atividade_calculadora/index.html
+++ b/Aulas/atividade_calculadora/index.html
@@ -13,7 +13,10 @@
             <input type="number">
             <!-- verificar
             <input formControlName="sGPTypeDeliveryId" type="text" placeholder="apenas números" 
-             class="form-control" required="required" pattern="[0-9]+$" -->
+             class="form-control" required="required" pattern="[0-9]+$"
+             seleciona item ctrl + d (para pega os iguais) 
+             span mesma coisa que div-->
+
         </label>
     </div>
     <main>
