--- a/Aulas/Aula_10/jogo_da_velha.html
+++ b/Aulas/Aula_10/jogo_da_velha.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Jogo da Velha</title>
 </head>
 <body>
@@ -28,6 +28,14 @@
 
         </div>
 
+        <div class="rodape">
+            <div class="mais">
+                <button>Iniciar outro jogo</button>
+            </div>
+            <div class ="historico">
+                <button>Historico</button>
+            </div>
+        </div>
     <script src="./script.js"></script>
 </body>
 </html>
