--- a/Aulas/Aula_10/jogo_da_velha.html
+++ b/Aulas/Aula_10/jogo_da_velha.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="rodape">
-            <div class="mais">
+            <div class="restart">
                 <button>Iniciar outro jogo</button>
             </div>
             <div class ="historico">
